@@ -1,3 +1,4 @@
+* Hide columns containing always the same value
 * Remove Tabs Position option
 * Manage product attribute
 * Remove float_time widget
